<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    app:startDestination="@id/navigation_dashboard">

    <fragment
        android:id="@+id/navigation_history"
        android:name="de.unipassau.calorietracker.ui.history.HistoryFragment"
        android:label="@string/title_history"
        tools:layout="@layout/fragment_history" />

    <fragment
        android:id="@+id/navigation_dashboard"
        android:name="de.unipassau.calorietracker.ui.dashboard.DashboardFragment"
        android:label="@string/title_dashboard" />

    <fragment
        android:id="@+id/navigation_fooddb"
        android:name="de.unipassau.calorietracker.ui.fooddb.FooddbFragment"
        android:label="@string/title_fooddb"
        tools:layout="@layout/fragment_fooddb" />
</navigation>