<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".BarcodeResultActivity">

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="32dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:id="@+id/lt_new"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center|top"
            android:orientation="vertical"
            android:visibility="gone">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:text="@string/text_bc_item_new"
                android:textAlignment="center" />

            <TextView
                android:id="@+id/tv_bc_new_ean"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:text="@string/hint_ean"
                android:textAlignment="center" />

            <EditText
                android:id="@+id/et_bc_new_name"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginBottom="16dp"
                android:layout_weight="0"
                android:ems="10"
                android:hint="@string/item_name_hint"
                android:inputType="text" />

            <EditText
                android:id="@+id/et_bc_new_calorie"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginBottom="16dp"
                android:layout_weight="0"
                android:ems="10"
                android:hint="@string/item_calorie_hint"
                android:inputType="numberSigned" />

            <EditText
                android:id="@+id/et_bc_new_amount"
                android:layout_width="128dp"
                android:layout_height="48dp"
                android:layout_marginBottom="16dp"
                android:layout_weight="0"
                android:ems="10"
                android:hint="@string/item_amount_hint"
                android:inputType="numberSigned" />

            <Button
                android:id="@+id/btn_bc_create"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0"
                android:text="@string/add_button_text"
                app:icon="@drawable/ic_baseline_playlist_add_24" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/lt_existing"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center|top"
            android:orientation="vertical"
            android:visibility="gone">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:text="@string/text_bc_item_found"
                android:textAlignment="center" />

            <TextView
                android:id="@+id/tv_bc_existing_ean"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/hint_ean"
                android:textAlignment="center" />

            <TextView
                android:id="@+id/tv_bc_existing_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/text_undefined_item"
                android:textAlignment="center"
                android:textSize="24sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tv_bc_existing_calorie"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:text="@string/unit_cal"
                android:textAlignment="center" />

            <EditText
                android:id="@+id/et_bc_existing_amount"
                android:layout_width="128dp"
                android:layout_height="48dp"
                android:layout_marginBottom="16dp"
                android:layout_weight="0"
                android:ems="10"
                android:hint="@string/item_amount_hint"
                android:inputType="numberSigned" />

            <Button
                android:id="@+id/btn_bc_add"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0"
                android:text="@string/add_button_text"
                app:icon="@drawable/ic_baseline_playlist_add_24" />

        </LinearLayout>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>